# invest-facil-ai

./: main.py  pyproject.toml  test.py  with_history.py
src/agents/: currency_agent.py  general_subject_agent.py  main.py  stock_agent.py
src/markdowns/currency/: main.py
src/markdowns/stock/: main.py
src/prompts/: currency_agent_prompt.py  general_subject_agent_prompt.py  main_agent_prompt.py  stock_agent_prompt.py
src/tools/: tools.py
src/tools/currency/: tools.py
src/tools/stock/: stock_tools.py
src/utils/: __init__.py
