[project]
name = "new-start"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipython>=9.4.0",
    "langchain>=0.3.27",
    "langchain-community>=0.3.27",
    "langchain-google-genai>=2.1.9",
    "langchain-google-vertexai>=2.0.28",
    "langchain-groq>=0.3.7",
    "langchain-ollama>=0.3.6",
    "langchain-openai>=0.3.29",
    "langchain-tavily>=0.2.11",
    "langgraph>=0.6.4",
    "langgraph-supervisor>=0.0.29",
    "pillow>=11.3.0",
    "python-dotenv>=1.1.1",
    "streamlit>=1.48.1",
]
